--- a/my_app/static/deps/css/my_css.css
+++ b/my_app/static/deps/css/my_css.css
@@ -1,3 +1,7 @@
+#dropdownIcon {
+  transition: transform 0.3s;
+}
+
 body {
   background-image: url("../images/bg-image.jpg");
   background-repeat: no-repeat;
