--- a/my_app/main/templates/main/index.html
+++ b/my_app/main/templates/main/index.html
@@ -13,7 +13,7 @@
     <footer class="py-4 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">
-                {{ footer_text }}
+                Copyright &copy; Home Python Hub Studio 2023
             </p>
         </div>
     </footer>
