--- a/my_app/goods/templates/goods/catalog.html
+++ b/my_app/goods/templates/goods/catalog.html
@@ -58,14 +58,14 @@
 							<p class="card-title">{{ product.name }}</p>
 						</a>
 						<p class="card-text text-truncate">{{ product.description }}</p>
-						<p class="product_id">{{ product.id }}</p>
+						<p class="product_id"> id: {{ product.display_id }}</p>
 						<div class="d-flex justify-content-between">
 							{% if product.discount %}
 								<p><s>{{ product.price }}</s> $</p>
-								<p><strong>{{ product.discounted_price }} $</strong></p>
+								<p><strong>{{ product.display_discounted_price }} $</strong></p>
 								<span class="badge bg-warning text-dark">Скидка {{ product.discount }} %</span>
 							{% else %}
-							<p><strong>{{ product.price }} $</strong></p>
+								<p><strong>{{ product.price }} $</strong></p>
 							{% endif %}
 							<a href="#" class="btn add-to-cart">
 								<img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
