--- a/my_app/goods/templates/goods/catalog.html
+++ b/my_app/goods/templates/goods/catalog.html
@@ -81,25 +81,28 @@
 	<nav aria-label="Page navigation example">
 		<ul class="pagination justify-content-center my-4">
 			<div class="custom-shadow d-flex">
+
 				<li class="page-item {% if not products.has_previous %} disabled {% endif %}">
-					<a class="page-link" href="{% if products.has_previous %}
-							{% url "catalog:index" slug_url products.previous_page_number %}
-							{% else %}
-							#
-							{% endif %}">Previous</a>
+					<a class="page-link" href="{% if products.has_previous %}?page={{ products.previous_page_number }}
+					{% else %}
+					#
+					{% endif %}">Previous</a>
 				</li>
 
 			 	{% for page in products.paginator.page_range %}
-					{% if page >= products.number|add:-2 and page <= products.number|add:2 %}
-						<li class="page-item">
-							<a class="page-link {% if products.number == page%} active {%endif %} " href="{% url "catalog:index" slug_url page %}">{{ page }}</a>
-						</li>
-					{% endif %}
+				{% if page >= products.number|add:-2 and page <= products.number|add:2 %}
+					<li class="page-item {% if products.number == page %} active {%endif %}">
+						<a class="page-link" href="?page={{ page }}">{{ page }}</a>
+					</li>
+				{% endif %}
 				{% endfor %}
 
 				<li class="page-item {% if not products.has_next %} disabled {% endif %} ">
-					<a class="page-link" href="{% if products.has_next %} {% url "catalog:index" slug_url products.next_page_number %} {% endif %} ">Next</a>
+					<a class="page-link" href="{% if products.has_next %}?page={{ products.next_page_number }}
+					{% else %}
+					#{% endif %}">Next</a>
 				</li>
+
 			</div>
 		</ul>
 	</nav>
