--- a/my_app/templates/goods/catalog.html
+++ b/my_app/templates/goods/catalog.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% load goods_tags %}
 
@@ -144,7 +144,7 @@
 
 					</div>
 				</ul>
-			</nav>
+w			</nav>
 		{% endif %}
 	</div>
 {% endblock %}
