--- a/my_app/templates/main/about.html
+++ b/my_app/templates/main/about.html
@@ -6,8 +6,10 @@
 {% endblock  %}
 
 {% block  content %}
-    <h2 class="pt-5"><strong>{{ context }}</strong></h2>
-    <p class="m-2">{{ text_on_page }}</p>
+    <div class="mt-5 p-5 bg-light custom-shadow ">
+        <h2 class="pt-5"><strong>{{ context }}</strong></h2>
+        <p class="m-2">{{ text_on_page }}</p>
+    </div>
 {% endblock  %}
 
 {% block footer %}
