--- a/my_app/templates/users/login.html
+++ b/my_app/templates/users/login.html
@@ -8,7 +8,10 @@
         <div class="row justify-content-center">
             <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                 <h2 class="text-center mb-4">Authorization</h2>
-                <form>
+                <form action="{% url "user:login" %}" method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    {% comment %}
                     <div class="mb-3">
                         <label for="username" class="form-label">User name</label>
                         <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
@@ -17,6 +20,7 @@
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
                     </div>
+                    {% endcomment %}
                     <button type="submit" class="btn btn-dark btn-block">Log in</button>
                 </form>
                 <div class="mt-3">
