--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -181,6 +181,7 @@
                     <!-- Пустой блок на Ваше усмотрение -->
                 </div>
                 <div class="col-lg-10">
+                    {% include "includes/notifications.html" %}
                     {% block content %}{% endblock %}
 				</div>
             </div>
