--- a/my_app/templates/users/login.html
+++ b/my_app/templates/users/login.html
@@ -10,17 +10,21 @@
                 <h2 class="text-center mb-4">Authorization</h2>
                 <form action="{% url "user:login" %}" method="post">
                     {% csrf_token %}
-                    {{ form }}
-                    {% comment %}
                     <div class="mb-3">
-                        <label for="username" class="form-label">User name</label>
-                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                        <label for="id_username" class="form-label">{{form.username.label}}:</label>
+                        <input type="text" class="form-control"
+                            value="{% if form.username.value %}{{form.username.value}}{% endif %}"
+                            name="username" id="id_username" placeholder="Enter your username"
+                            required
+                        >
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                        <label for="id_password" class="form-label">{{form.password.label}}:</label>
+                        <input type="password" class="form-control"
+                            name="password" id="id_password" placeholder="Enter your password"
+                            required
+                        >
                     </div>
-                    {% endcomment %}
                     <button type="submit" class="btn btn-dark btn-block">Log in</button>
                 </form>
                 <div class="mt-3">
