--- a/my_app/templates/goods/product.html
+++ b/my_app/templates/goods/product.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block modal_cart %}
+	{% include "includes/cart_button.html" %}
+{% endblock %}
+
 {% block content %}
 	<div class="container mt-5">
 		<div class="card mb-4 custom-shadow">
@@ -47,7 +51,7 @@
 				<p class="card-text">Цена: <strong>{{ product.display_discounted_price }} $</strong></p>
 				<h5 class="card-title">{{ product.name }}</h5>
 				<p class="card-text">{{ product.description }}</p>
-				<a href="#" class="btn btn-dark add-to-cart">Comprar</a>
+				<a href="{% url "cart:cart_add" product.slug %}" class="btn btn-dark add-to-cart">Añadir al carito</a>
 			</div>
 		</div>
 	</div>
