--- a/my_app/templates/users/login.html
+++ b/my_app/templates/users/login.html
@@ -14,6 +14,9 @@
                 <h2 class="text-center mb-4">Authorization</h2>
                 <form action="{% url "user:login" %}" method="post">
                     {% csrf_token %}
+                    {% if request.GET.next %}
+                        <input type="hidden" name="text" value={{ request.GET.next }}>
+                    {% endif %}
                     <div class="mb-3">
                         <label for="id_username" class="form-label">{{form.username.label}}:</label>
                         <input type="text" class="form-control"
