--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -49,9 +49,9 @@
                         <img class="mx-1" src="{% static "/deps/icons/facebook.svg" %}" alt="Catalog Icon" width="16" height="16">
                         Facebook (In development)
                     </a>
-                    <a href="#" class="btn btn-dark">
+                    <a href="{% provider_login_url 'github' %}?next=/" class="btn btn-dark">
                         <img class="mx-1" src="{% static "/deps/icons/github.svg" %}" alt="Catalog Icon" width="16" height="16">
-                        GitHub (In development)
+                        GitHub
                     </a>
                 </div>
             </div>
